optimize assets directory

--- a/public/ext/examples/index.html
+++ b/public/ext/examples/index.html
@@ -152,7 +152,7 @@
 
 
             <script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading Core API...';</script>
-            <script type="text/javascript" src="../ext-all-debug.js"></script>
+            <script type="text/javascript" src="../ext-all.js"></script>
             <script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading UI Components...';</script>
             <script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Initializing...';</script>
 
